ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goserver-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "ingress.fullcycle.com.br"
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: goserver-service
              port:
                number: 8080
  tls:
  - hosts:
    - ingress.fullcycle.com.br    # usado para o cert manager
    secretName: letsencrypt-tls
